Avoid animal image stretching on DetailsPage

--- a/src/templates/DetailsPageStyles.css
+++ b/src/templates/DetailsPageStyles.css
@@ -15,6 +15,7 @@
 #imgDetailPage {
     width: 100%;
     height: 550px;
+    object-fit: contain;
 }
 
 .details-content span {
